--- a/UserApplication/.classpath
+++ b/UserApplication/.classpath
@@ -13,5 +13,9 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="/Users/vidhisagathiya/Downloads/gson-2.6.2.jar"/>
 	<classpathentry kind="lib" path="/Airline-Management-System/dist/lib/mysql-connector-java-8.0.22.jar"/>
+	<classpathentry kind="lib" path="/Users/vidhisagathiya/Downloads/junit-4.13.2.jar"/>
+	<classpathentry kind="lib" path="/Users/vidhisagathiya/Downloads/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="resources"/>
+	<classpathentry kind="lib" path="/Users/vidhisagathiya/Downloads/rs2xml.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
